--- a/youtube.html
+++ b/youtube.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link href="youtube.css" rel="stylesheet"/>
+    <link href="styles/youtube.css" rel="stylesheet"/>
 </head>
 <body>
     <!--all content-->
